cleaning up some unneeded files, fixing some styles, removing the polyfill, as it isnt needed on modern browsers and seems to be breaking the demo on mobile

--- a/styles/app.css
+++ b/styles/app.css
@@ -115,6 +115,8 @@ label {
   right: 3px;
   z-index: 5;
   cursor: pointer;
+  background-color: black;
+  border-radius: 10px;
 }
 
 input[type=checkbox] {
